Twenty Seventeen: Fix site name and description appearing off screen in some browsers
* Occurred in Firefox and IE 11.
* Removes Flexbox in favor of more well-supported `display: table; ` layout technique.
* Maintains consistent layout on smaller screens.

Props laurelfulford.

Fixes #38543.

Built from https://develop.svn.wordpress.org/trunk@39124


git-svn-id: http://core.svn.wordpress.org/trunk@39064 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyseventeen/assets/css/ie8.css
+++ b/wp-content/themes/twentyseventeen/assets/css/ie8.css
@@ -60,12 +60,28 @@ img {
 	overflow: hidden;
 }
 
+.has-header-image.twentyseventeen-front-page .custom-header,
+.has-header-image.home.blog .custom-header {
+	display: block;
+}
+
 .custom-header-image {
 	background-position: bottom center;
 }
 
 .site-branding {
 	padding: 45px 0;
+}
+
+.has-header-image.twentyseventeen-front-page .site-branding,
+.has-header-image.home.blog .site-branding {
+	bottom: 0;
+	display: block;
+	left: 0;
+	height: auto;
+	padding-top: 0;
+	position: absolute;
+	width: 100%;
 }
 
 .has-header-image .custom-header-image img,
@@ -192,6 +208,12 @@ ol.children .children {
 }
 
 /* RTL Styles */
+
+.rtl .has-header-image.twentyseventeen-front-page .site-branding,
+.rtl .has-header-image.home.blog .site-branding {
+	left: auto;
+	right: 0;
+}
 
 .rtl .entry-footer .cat-links,
 .rtl .entry-footer .tags-links {
